--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /*Обнуление*/
+@import url("https://fonts.googleapis.com/css2?family=Poor+Story&family=Poppins:wght@400;500;600&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -71,4 +72,110 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: inherit;
 }
 
-/*--------------------*//*# sourceMappingURL=style.css.map */
+/*--------------------*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background: #43AFFC;
+}
+
+.wrapper {
+  width: 400px;
+  border-radius: 7px;
+  background: white;
+}
+
+.wrapper header {
+  color: #43AFFC;
+  font-size: 21px;
+  font-weight: 500;
+  padding: 16px 15px;
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #bfbfbf;
+}
+
+header i {
+  cursor: pointer;
+  font-size: 30px;
+  margin-right: 8px;
+}
+
+.wrapper .input-part {
+  display: none;
+  margin: 20px 25px 30px;
+}
+
+.input-part .info-txt {
+  display: none;
+  font-size: 17px;
+  text-align: center;
+  padding: 12px 10px;
+  border-radius: 7px;
+  margin-bottom: 15px;
+}
+
+.info-txt.error {
+  display: block;
+  color: #721c24;
+  background: f8d7da;
+  border: 1px solid #f5c6cb;
+}
+
+.info-txt.pending {
+  display: block;
+  color: #0c5460;
+  background: #d1ecf1;
+  border: 1px solid #bee5eb;
+}
+
+.input-part :where(input, button) {
+  width: 100%;
+  height: 55px;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  border-radius: 7px;
+}
+
+.input-part input {
+  text-align: center;
+  border: 1px solid #bfbfbf;
+}
+
+.input-part input:is(:focus, :valid) {
+  border: 2px solid #43AFFC;
+}
+
+.input-part .separator {
+  height: 1px;
+  width: 100%;
+  margin: 25px 0;
+  background: #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.separator::before {
+  content: "or";
+  color: #ccc;
+  font-size: 19px;
+  padding: 0 15px;
+  background: #fff;
+}
+
+.input-part button {
+  color: white;
+  cursor: pointer;
+  background: #43AFFC;
+}/*# sourceMappingURL=style.css.map */
