--- a/css/style.css
+++ b/css/style.css
@@ -1,78 +1,4 @@
-@charset "UTF-8";
-/*Обнуление*/
-@import url("https://fonts.googleapis.com/css2?family=Poor+Story&family=Poppins:wght@400;500;600&display=swap");
-* {
-  padding: 0;
-  margin: 0;
-  border: 0;
-}
-
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
-:focus, :active {
-  outline: none;
-}
-
-a:focus, a:active {
-  outline: none;
-}
-
-nav, footer, header, aside {
-  display: block;
-}
-
-html, body {
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
-  font-size: 14px;
-  -ms-text-size-adjust: 100%;
-  -moz-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-
-input, button, textarea {
-  font-family: inherit;
-}
-
-input::-ms-clear {
-  display: none;
-}
-
-button {
-  cursor: pointer;
-}
-
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-
-a, a:visited {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: none;
-}
-
-ul li {
-  list-style: none;
-}
-
-img {
-  vertical-align: top;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-size: inherit;
-  font-weight: inherit;
-}
-
-/*--------------------*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -88,31 +14,50 @@ body {
   background: #43AFFC;
 }
 
+::-moz-selection {
+  color: #fff;
+  background: #43AFFC;
+}
+
+::selection {
+  color: #fff;
+  background: #43AFFC;
+}
+
 .wrapper {
   width: 400px;
+  background: #fff;
   border-radius: 7px;
-  background: white;
+  box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
 }
 
 .wrapper header {
-  color: #43AFFC;
+  display: flex;
   font-size: 21px;
   font-weight: 500;
+  color: #43AFFC;
   padding: 16px 15px;
-  display: flex;
   align-items: center;
-  border-bottom: 1px solid #bfbfbf;
+  border-bottom: 1px solid #ccc;
 }
 
 header i {
+  font-size: 0em;
   cursor: pointer;
-  font-size: 30px;
   margin-right: 8px;
 }
 
+.wrapper.active header i {
+  margin-left: 5px;
+  font-size: 30px;
+}
+
 .wrapper .input-part {
-  display: none;
   margin: 20px 25px 30px;
+}
+
+.wrapper.active .input-part {
+  display: none;
 }
 
 .input-part .info-txt {
@@ -124,16 +69,16 @@ header i {
   margin-bottom: 15px;
 }
 
-.info-txt.error {
-  display: block;
+.input-part .info-txt.error {
   color: #721c24;
-  background: f8d7da;
+  display: block;
+  background: #f8d7da;
   border: 1px solid #f5c6cb;
 }
 
-.info-txt.pending {
-  display: block;
+.input-part .info-txt.pending {
   color: #0c5460;
+  display: block;
   background: #d1ecf1;
   border: 1px solid #bee5eb;
 }
@@ -149,11 +94,24 @@ header i {
 
 .input-part input {
   text-align: center;
-  border: 1px solid #bfbfbf;
+  padding: 0 15px;
+  border: 1px solid #ccc;
 }
 
 .input-part input:is(:focus, :valid) {
   border: 2px solid #43AFFC;
+}
+
+.input-part input::-moz-placeholder {
+  color: #bfbfbf;
+}
+
+.input-part input:-ms-input-placeholder {
+  color: #bfbfbf;
+}
+
+.input-part input::placeholder {
+  color: #bfbfbf;
 }
 
 .input-part .separator {
@@ -161,6 +119,7 @@ header i {
   width: 100%;
   margin: 25px 0;
   background: #ccc;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -168,14 +127,120 @@ header i {
 
 .separator::before {
   content: "or";
-  color: #ccc;
+  color: #b3b3b3;
   font-size: 19px;
   padding: 0 15px;
   background: #fff;
 }
 
 .input-part button {
-  color: white;
+  color: #fff;
   cursor: pointer;
   background: #43AFFC;
+  transition: 0.3s ease;
+}
+
+.input-part button:hover {
+  background: #1d9ffc;
+}
+
+.wrapper .weather-part {
+  display: none;
+  margin: 30px 0 0;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.wrapper.active .weather-part {
+  display: flex;
+}
+
+.weather-part img {
+  max-width: 125px;
+}
+
+.weather-part .temp {
+  display: flex;
+  font-weight: 500;
+  font-size: 72px;
+}
+
+.weather-part .temp .numb {
+  font-weight: 600;
+}
+
+.weather-part .temp .deg {
+  font-size: 40px;
+  display: block;
+  margin: 10px 5px 0 0;
+}
+
+.weather-part .weather {
+  font-size: 21px;
+  text-align: center;
+  margin: -5px 20px 15px;
+}
+
+.weather-part .location {
+  display: flex;
+  font-size: 19px;
+  padding: 0 20px;
+  text-align: center;
+  margin-bottom: 30px;
+  align-items: flex-start;
+}
+
+.location i {
+  font-size: 22px;
+  margin: 4px 5px 0 0;
+}
+
+.weather-part .bottom-details {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  border-top: 1px solid #ccc;
+}
+
+.bottom-details .column {
+  display: flex;
+  width: 100%;
+  padding: 15px 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.column i {
+  color: #5DBBFF;
+  font-size: 40px;
+}
+
+.column.humidity {
+  border-left: 1px solid #ccc;
+}
+
+.column .details {
+  margin-left: 3px;
+}
+
+.details .temp, .humidity span {
+  font-size: 18px;
+  font-weight: 500;
+  margin-top: -3px;
+}
+
+.details .temp .deg {
+  margin: 0;
+  font-size: 17px;
+  padding: 0 2px 0 1px;
+}
+
+.column .details p {
+  font-size: 14px;
+  margin-top: -6px;
+}
+
+.humidity i {
+  font-size: 37px;
 }/*# sourceMappingURL=style.css.map */
