--- a/css/style.scss
+++ b/css/style.scss
@@ -7,10 +7,12 @@
 }
 body{
   display: flex;
+  flex-wrap:wrap;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   background: #43AFFC;
+
 }
 ::selection{
   color: #fff;
@@ -19,8 +21,7 @@ body{
 .wrapper{
   width: 400px;
   background: #fff;
-  border-radius: 7px;
-  box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
+
 }
 .wrapper header{
   display: flex;
@@ -194,4 +195,69 @@ header i{
 }
 .humidity i{
   font-size: 37px;
+}
+
+// 2nd part Week Weather
+
+.weekWeather {
+  
+  display: none;
+  flex-direction: column;
+  width: 400px;
+  height: 500px;
+  background: #fff;
+  border-left: 1px solid #ccc;
+  
+  &__title{
+    font-size: 21px;
+    text-align: center;
+    margin: 10px 0 10px 0;
+  }
+
+  &__days {
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    justify-content:space-between;
+  }
+
+  &__day {
+    padding: 10px;
+    display: flex;
+    justify-content:space-between;
+    align-items:center;
+  }
+
+  &__img {
+    width: 50px;
+    height: 50px;
+  }
+
+  &__description {
+  }
+
+  &__temp {
+  }
+
+  &__feelsLike {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+ 
+}
+.feelsLike {
+
+  &__description {
+  }
+
+  &__value {
+
+  }
+}
+
+
+.weekWeather .active{
+
 }
